[package]
name = "slapper"
version = "0.1.0"
authors = ["R. Jacobs <jacobsrudolph@yahoo.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
http = "0.1.16"
regex = "1.1.2"
reqwest = "0.9.11"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
serde_yaml = "0.8"
toml = "0.4.10"
url = "1.7.2"